--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
      <!-- CSS Link  -->
      <link rel="stylesheet" href="index.css">
 
-  
 
 </head>
 <body>
    <h1>Hello world</h1>
    <p class="nepal">I am UI desinger and web developer</p>
+   <p>where i can learn git hub basics?</p>
 
     <!-- Script Link -->
     <script src="script.js"></script>
